@@ -1,5 +1,6 @@
 v0.9.0
     Add features to request argument parsing module.
+    Support YAML content-type parsing in request body.
     Support batch query concurrency control.
     Improve elasticsearch error response.
     Revise query builder customization hook.
